se terminó el proyecto

--- a/proyecto/proyecto.html
+++ b/proyecto/proyecto.html
@@ -8,45 +8,47 @@
 </head>
 
 <body>
-    <div class="header">
-        <img src='./Imagenes/Logo.png'>
-        <div class="icono">
-            <span class="icon-menu"></span>
-        </div>
-        <ul id='lista'>
-            <li>EL ESPACIO</li>
-            <li>PRODUCTOS</li>
-            <li>OFERTAS</li>
-            <li>RESERVAS</li>
-            <li>CONTACTO</li>
-        </ul>
-        <div class="encab">
+    <div class="container">
+        <div class="header">
+            <div class="logomenu">
+                <img src='./Imagenes/Logo.png'>
+                <div class="menu">
+                    <div class="icono">
+                        <span class="icon-menu"></span>
+                    </div>
+                    <ul id='lista'>
+                        <li>EL ESPACIO</li>
+                        <li>PRODUCTOS</li>
+                        <li>OFERTAS</li>
+                        <li>RESERVAS</li>
+                        <li>CONTACTO</li>
+                    </ul>
+                </div>
+            </div>
             <h2>RECIÉN HECHO, TODOS LOS DÍAS</h2>
             <hr size=2 width=25%>
             <p>Chocolate cake chocolate cake pie candy canes chocolate cake bonbon. I love marzipan liquorice I love cake chupa chups. Pie danish macaroon ice cream ice cream. Bonbon sweet bonbon jelly beans jelly-o I lone lollipop
             </p>
         </div>
-    </div>
-    <div class="secondHeader">
-        <div class="secondHeaderA">
+        <div class="secondHeaderA secondHeader">
             <h2>VEN AL BRUNCH DE LOS DOMINGOS</h2>
             <p>Sesame snap icing chocolate bar. I love donut powder sesame snaps. Jelly-o topping caramels. sugar plum I love gummi bears
             </p>
         </div>
-        <div class="secondHeaderB">
+        <div class="secondHeaderB secondHeader">
             <h2>CELEBRA TUS FIESTAS CON NOSOTROS</h2>
             <p>Sesame snap icing chocolate bar. I love donut powder sesame snaps. Jelly-o topping caramels. sugar plum I love gummi bears
             </p>
         </div>
-    </div>
-    <div class="present2">
-        <h2>VEN A DESAYUNAR</h2>
-        <hr size=2 width=10%>
-        <p>Bonbon topping I love sweet roll I love candy icing chocolate jelly. Pie soufflé sweet. Apple pie bonbon caramels powder
-        </p>
-        <h3 class="nuestrosProductos">DESCUBRE NUESTROS PRODUCTOS</h3>
-    </div>
-    <div class="panPrincipal">
+
+        <div class="present2">
+            <h2>VEN A DESAYUNAR</h2>
+            <hr size=2>
+            <p>Bonbon topping I love sweet roll I love candy icing chocolate jelly. Pie soufflé sweet. Apple pie bonbon caramels powder
+            </p>
+            <h3 class="nuestrosProductos">DESCUBRE NUESTROS PRODUCTOS</h3>
+        </div>
+
         <div class="pan">
             <img src='./Imagenes/Icono1.png'>
             <div>
@@ -60,18 +62,18 @@
             <img src='./Imagenes/Icono2.png'>
             <div>
                 <h3>TARTAS PARA CADA DÍA</h3>
-                <p>Cup cake danish I love halvah bonbon icing donut. Sweet caramels gingerbread bear claw jujubes chocolate caje pudding sesame snaps bonbon. Chocolate cake wafer pudding muffin wafer sweet roll I love chupa chups. Apple pie jujubes ice cream
-                    sugar plum topping.
+                <p>Sesame snap icing chocolate bar. I love donut powder sesame snaps. Jelly-o topping caramels. sugar plum I love gummi bears
                 </p>
             </div>
         </div>
-    </div>
-    <div>
+
+
         <div class="pan">
             <img src='./Imagenes/Icono3.png'>
             <div>
                 <h3>PRUEBA NUESTROS DULCES</h3>
-                <p>Sesame snap icing chocolate bar. I love donut powder sesame snaps. Jelly-o topping caramels. sugar plum I love gummi bears
+                <p>Cup cake danish I love halvah bonbon icing donut. Sweet caramels gingerbread bear claw jujubes chocolate caje pudding sesame snaps bonbon. Chocolate cake wafer pudding muffin wafer sweet roll I love chupa chups. Apple pie jujubes ice cream
+                    sugar plum topping.
                 </p>
             </div>
         </div>
@@ -83,21 +85,22 @@
                 </p>
             </div>
         </div>
-    </div>
-    <div class="secondHeader">
-        <div class="secondHeaderB">
-            <h2 class="contacto">CONTACTA CON NOSOTROS</h2>
-            <p>Si quieres hacer una reserva, tienes alguna sugerencia o simplemente o simplemente quieres saludar, escribenos a: <a href='cafeoslo@cafeoslo.com'>cafeoslo@cafeoslo.com</a>
-            </p>
+        <div class="second">
+            <div class="secondHeaderB secondHeader">
+                <h2 class="contacto">CONTACTA CON NOSOTROS</h2>
+                <p>Si quieres hacer una reserva, tienes alguna sugerencia o simplemente o simplemente quieres saludar, escribenos a: <a href='cafeoslo@cafeoslo.com'>cafeoslo@cafeoslo.com</a>
+                </p>
+            </div>
+            <div class="secondHeaderA secondHeader">
+                <h2 class="contacto">¿SABES DÓNDE ESTAMOS?</h2>
+                <p>Sesame snap icing chocolate bar. I love donut powder sesame snaps. Jelly-o topping caramels. sugar plum I love gummi bears
+                </p>
+            </div>
         </div>
-        <div class="secondHeaderA">
-            <h2 class="contacto">¿SABES DÓNDE ESTAMOS?</h2>
-            <p>Sesame snap icing chocolate bar. I love donut powder sesame snaps. Jelly-o topping caramels. sugar plum I love gummi bears
-            </p>
+
+        <div class="footer">
+            <p class="">Septiembre 2015. <br><span>-</span> Todos los derechos reservados </p>
         </div>
-    </div>
-    <div class="footer">
-        <p class="">Septiembre 2015. <span>-</span> Todos los derechos reservados </p>
     </div>
 
     <script src="./script/script.js" id='hola'></script>
